Fix collapse

--- a/assets/sass/_helper.scss
+++ b/assets/sass/_helper.scss
@@ -9,6 +9,8 @@
 
 .list-inline li { display: inline-block; }
 
+.inline-block { display: inline-block; }
+
 /**
 * Angles
 */
